# madwimax

./: .gitignore  025_madwimax.rules  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  configure.ac  protocol.c  protocol.h  tap_dev.c  tun_dev.c  tun_dev.h  wimax.c  wimax.h
debian/: changelog  control  copyright  postinst  rules  watch
include/: Makefile.am
man/: Makefile.am  madwimax.8.txt
scripts/: Makefile.am
scripts/conf/: Makefile.am  config.lua
scripts/events/: Makefile.am  event.sh.generic.in  event.sh.in  event.sh.macosx.in  event.sh.wl500g.in
scripts/if-up-down/: Makefile.am  if-down  if-up
scripts/udev/: z60_madwimax.rules  z60_madwimax.rules.in
src/: Makefile.am  devconfig.c  devconfig.h  logging.c  logging.h  protocol.c  protocol.h  tap_dev.c  tap_dev.h  wimax.c  wimax.h
